--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-partials": "^0.3.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "mysql": "^2.17.1",
     "partials": "^0.1.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
